Fix possible contrast violation

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -283,6 +283,9 @@ main {
 	text-align: center;
     border-radius: var(--radius);
 }
+.menu * {
+	color: var(--ink-000) !important;
+}
 .menu button {
 	padding: 0.5rem 1rem;
 	font-weight: 700;
